# MpApi-Replacer

./: .gitignore  README.md  pyproject.toml  v3.md
src/: ändere_bereich.py
src/MpApi/: baseApp.py  oneField.py  replace2.py  replacer.py
src/MpApi/Replace/: Plugin.py  XML.py  __init__.py  baseApp.py  bereichÄndern.py  crud.py  oneField.py  replace1.py  replace2.py  replace3.py
src/MpApi/Replace/Plugins/: AssetAndrea.py  AssetDennis.py  AssetFlavia.py  AssetFreigabe.py  BereichÄndern.py  DigiP.py  Emilia.py  ErwerbNotizAusgabe.py  ErwerbNotizAusgabe3.py  Freigabe.py  FreigabeAndrea.py  FreigabeJa.py  FreigabeJa2.py  FreigabeNein.py  FreigabeUte.py  Objekttyp.py  Oboen.py  VerwInstitution.py  WestFreigabe.py
test/: conf.toml  conf_group.toml  import.py  test_import.py  test_replace2v2.py
test/http/: create_voc_ref.py
