[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "MpApi.Replace"
authors = [{name = "Maurice Mengel", email = "mauricemengel@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
keywords = ["museum", "museumPlus", "api client"]
# datetime should be included in Python
# typing_extensions makes newer typing features available to older Pythons 
dependencies = [
    "lxml >=4.8.0", #pathlike objects
    "requests >=2.6",
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[project.scripts]
mpReplace1 = 'MpApi.Replace:replace1'
mpReplace2 = 'MpApi.Replace:replace2'
mpReplace3 = 'MpApi.Replace:replace3'
